# claude-ablation-lab

./: .gitignore  .gitleaksignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: METHODOLOGY.md
docs/audits/: 2026-07-06_independent-audit.md  2026-07-07_literature-gap-analysis.md  2026-07-11_adversarial-audit-findings.md  2026-07-11_big-picture-mission-and-roadmap.md
docs/design/: 2026-06-25_independent-review.md  2026-06-25_phase3-review.md  2026-06-26_phase4-methodology-audit.md  2026-06-26_pr4-adversarial-review.md  2026-07-01_comprehensive-review.md  2026-07-01_infra-loading-probe.md  2026-07-01_phase6-deferrals.md  2026-07-02_checkpoint-review.md  2026-07-02_cost-advisor-review.md  2026-07-02_cost-benchmark-map.md  2026-07-02_d6-review.md  2026-07-02_pr11-review.md  2026-07-02_t2-runway.md  2026-07-03_spend-audit.md  2026-07-04_pressure-test.md  2026-07-06_llm-judge-implementation.md
docs/plans/active/: 2026-07-06_llm-judge-phase.md
examples/books-validate/: CLAUDE.md  README.md  chapter.mdx  check.py  expected.json  files.json  labels.json  references.json  setup.sh  validate_fixture.py
examples/demo-infra/: README.md  setup.sh
examples/demo-infra/content/: README.md  project-reference.md
examples/judge-controls/: README.md
experiments/: log.txt
grids/: books-pilot.yaml  claude5-refresh.yaml  judge-pilot.yaml  pressure-test.yaml  showcase.yaml  smoke.yaml  v1.yaml
results/: claude5-refresh-2026-07-06.jsonl  showcase.jsonl
results/control-probes/: 2026-07-20.json
scripts/: make_showcase.py
src/claude_ablation_lab/: __init__.py  __main__.py  _version.py  analyze.py  control.py  grade.py  grid.py  item_ledger.py  judge.py  judge_analyze.py  judge_ledger.py  judge_orchestrate.py  ledger.py  orchestrate.py  plot.py  prepare.py  provenance.py  runner.py  showcase.py  t1_dataset.py  task.py  worktree.py
src/claude_ablation_lab/causal/: __init__.py  backdoor.py  dgp.py  grader.py
tasks/: t1_prompt_injection.yaml  t2_research_plan.yaml  t3_verbatim_anchor.yaml  t4_demo_infra.yaml  t5_books_validate.yaml  t6_books_validate_agent.yaml  t7_find_bug.yaml  t8_hard_math.yaml
tasks/t9_authoring/: t9_agent_guardrails.yaml  t9_attention_sinks.yaml  t9_context_compaction.yaml  t9_dewarping.yaml  t9_draft_heads.yaml  t9_interleaving.yaml  t9_kv_form_extraction.yaml  t9_sliding_window.yaml  t9_subagent_handoff.yaml  t9_survival_pd.yaml
tests/: conftest.py  test_analyze.py  test_authoring_conventions_grader.py  test_backdoor.py  test_books_fixture.py  test_books_grader.py  test_causal_items.py  test_cli.py  test_control.py  test_demo_infra.py  test_exact_match_grader.py  test_exact_match_set_grader.py  test_grade.py  test_grader_anchor.py  test_grader_classification.py  test_grader_validator.py  test_graders_registry.py  test_grid.py  test_item_ledger.py  test_judge_aggregate.py  test_judge_analyze.py  test_judge_cli.py  test_judge_controls.py  test_judge_ledger.py  test_judge_orchestrate.py  test_judge_parse.py  test_judges_transport.py  test_ledger.py  test_orchestrate.py  test_parse.py  test_plot.py  test_prepare.py  test_pressure_fixture.py  test_properties.py  test_provenance.py  test_published_refresh.py  test_published_showcase.py  test_runner.py  test_showcase.py  test_smoke.py  (+3 more)
tests/fixtures/: books_validate_gold.mdx  claude_json_api_limit.json  claude_json_success.json  claude_stream_json_tool_use.txt  research_plan_broken.md  research_plan_valid.md
(+55 files in other folders)
